<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CookPlan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="unknown_sign_in_response">Error login. Please, try again.</string>
    <string name="recipe_list_menu_title">Recipes</string>
    <string name="error_generate_image_path">Error with a generating image path process</string>
    <string name="permission_denied">Permission denied, We\'re sorry, you can\'t choose the picture</string>
    <string name="unable_to_copy_files">Unable to copy files to tessdata</string>
    <string name="text_wasnt_recognize">Something went wrong. Text wasn\'t recognized</string>
    <string name="processing_title">Wait a minute, please</string>
    <string name="processing_ocr_message">Doing OCR...</string>
    <string name="processing_upload_picture_message">Loading picture to server...</string>
    <string name="choose_recipe_language">Please choose the language</string>
    <string name="english_lan_title">English</string>
    <string name="russian_lan_title">Russian</string>
    <string name="new_recipe_title">New recipe</string>
    <string name="add_recipe_second_screen_title">Ingredients for </string>
    <string name="recognize_button_title">Recognize\n text</string>
    <string name="recipe_desc_hint">The cooking process</string>
    <string name="error_required_field">Recipe name is required</string>
    <string name="product_vocabulary_title">Products</string>
    <string name="shopping_list_title">Shopping list</string>
    <string name="enter_product_title">Enter a product</string>
    <string name="amount_product_title">Amount</string>
    <string name="product_amount_not_exist">Products without amout cannot be summed in shopping list</string>
    <string name="recipe_desc_is_not_needed_title">The cooking proccess wasn\'t explain. It might be easy to understand without explanation...</string>
    <string name="attention_title">Attention</string>
    <string name="whats_cooking_title">What\'re you gonna cook?</string>
    <string name="ingredients">Ingredients:</string>
    <string name="recipe_description_title">Directions</string>
    <string name="tab_all_ingredients_title">All</string>
    <string name="tab_ingredients_by_dish_title">By dishes</string>
    <string name="without_recipe_title">Without recipe</string>
    <string name="delete_recipe_from_shop_list_question">Are you sure that you want to delete this recipe form shopping list?</string>
    <string name="empty_shopping_list_title">Shopping list is empty</string>
    <string name="empty_recipe_list_title">You haven\'t had recipes yet</string>
    <string name="empty_product_list_title">You haven\'t had products yet</string>
    <string name="without_category_title">Without category</string>
    <string name="alcohol_drinks_title">Alcohol drinks</string>
    <string name="milk_product_title">Milk products</string>
    <string name="cheese_title">Cheeses</string>
    <string name="eggs_title">Eggs</string>
    <string name="confectionery_title">Confectionery</string>
    <string name="child_product_title">Baby products</string>
    <string name="drink_juices_title">Drinks, juices</string>
    <string name="bakery_products_title">Bakery</string>
    <string name="vegetables_fruits_title">Vegetables, fruits, mushrooms and berries</string>
    <string name="grocery_title">Grocery</string>
    <string name="meat_gastronomy_title">Meat gastronomy</string>
    <string name="meat_birds_title">Meat, birds</string>
    <string name="frozen_food_title">Frozen food</string>
    <string name="fish_seafood_caviar_title">Fish, seafood and caviar</string>
    <string name="vegetable_oils_sauces_and_condiments_title">Vegetable oils, sauces and condiments</string>
    <string name="tea_coffee_cacao_title">Tea, coffee and cacao</string>
    <string name="animals_products_title">Animal products</string>
    <string name="conservation_title">Conservation</string>
    <string name="ice_cream_title">Ice cream</string>
    <string name="diabetic_nutrition_title">Diabetic nutrition</string>
    <string name="cooked_food_title">Cooked food</string>
    <string name="household_chemicals_and_household_goods_title">Household chemicals and household goods</string>
    <string name="cosmetics_and_hygiene_title">Cosmetics and hygiene</string>
    <string name="games_and_toys">Games and toys</string>
    <string name="electric_appliances_and_household_appliances_title">Electric appliances and household appliances</string>
    <string name="repair_cottages_and_rest_products_title">Goods for repair, cottages and rest</string>
    <string name="car_products_title">Car products</string>
    <string name="wardrobe_title">Cloths, footwear, accessories</string>
    <string name="stationery_title">Stationery</string>
    <string name="books_and_printed_matter_title">Books and papers</string>
    <string name="products_for_garden_title">Garden</string>
    <string name="jar_title">jar</string>
    <string name="are_you_sure_remove_recipe">Recipe would remove. Are you sure about it?</string>
    <string name="are_you_sure_remove_company">Company would remove. Are you sure about it?</string>
    <string name="product_required_field">You have to choose the product from the list or enter the new one.</string>
    <string name="done_menu_title">Done</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="sign_in_default">Sign in</string>
    <string name="idp_name_google">Google</string>
    <string name="idp_name_facebook">Facebook</string>
    <string name="idp_name_twitter">Twitter</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="next_default">Next</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="required_field">You can\'t leave this empty.</string>
    <string name="invalid_email_address">That email address isn\'t correct</string>
    <string name="missing_email_address">Enter your email address to continue</string>
    <string name="progress_dialog_checking_accounts">Checking for existing accounts…</string>
    <string name="title_register_email">Sign up</string>
    <string name="name_hint">First &amp; last name</string>
    <string name="button_text_save">Save</string>
    <string name="progress_dialog_signing_up">Signing up…</string>
    <plurals name="error_weak_password">
        <item quantity="one">Password not strong enough. Use at least %1$d character and a mix of letters and numbers</item>
        <item quantity="other">Password not strong enough. Use at least %1$d characters and a mix of letters and numbers</item>
    </plurals>
    <string name="email_account_creation_error">Email account registration unsuccessful</string>
    <string name="error_user_collision">An account already exists with that email address.</string>
    <string name="create_account_preamble">"By tapping SAVE you are indicating that you agree to the "</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="title_welcome_back_idp_prompt">@string/sign_in_default</string>
    <string name="title_welcome_back_password_prompt">@string/sign_in_default</string>
    <string name="welcome_back_idp_header">You already have an account</string>
    <string name="welcome_back_email_header">Welcome back!</string>
    <string name="welcome_back_idp_prompt">
        You\'ve already used <xliff:g example="jane.doe@example.com" id="email_addr">%1$s</xliff:g>.
        Sign in with <xliff:g example="Google" id="provider_name">%2$s</xliff:g> to continue.
    </string>
    <string name="welcome_back_password_prompt_body">
        You\'ve already used <xliff:g example="jane.doe@example.com" id="email_addr">%1$s</xliff:g>
        to sign in. Enter your password for that account.
    </string>
    <string name="progress_dialog_signing_in">Signing in…</string>
    <string name="trouble_signing_in">Trouble signing in?</string>
    <string name="title_recover_password_activity">Recover password</string>
    <string name="title_confirm_recover_password">Check your email</string>
    <string name="password_recovery_body">Get instructions sent to this email that explain how to
        reset your password.</string>
    <string name="button_text_send">Send</string>
    <string name="confirm_recovery_body">Follow the instructions sent to %1$s to recover your password.</string>
    <string name="progress_dialog_sending">Sending…</string>
    <string name="error_email_does_not_exist">That email address doesn\'t match an existing account</string>
    <string name="sign_out_impossible">You cannot sign out from anonymous mode</string>
    <string name="sign_in">Sign in</string>
    <string name="anonymnous_auth">Enter as anonymous</string>
    <string name="error_share_title">Something went wrong, your information wasn\'t shared. Try later, please.</string>
    <string name="need_to_auth">Login to be able to share all you data with your family and friends.</string>
    <string name="gmail_ending_title">\@gmail.com</string>
    <string name="step_by_step_recipe_button_title">Open in Step-by-step mode</string>
    <string name="delete_shop_list_title">Remove shopping list</string>
    <string name="choose_right_delete_mode">Choose what do you want to remove</string>
    <string name="delete_already_bought">Remove products already bought.</string>
    <string name="delete_all_items_title">Remova all products</string>
    <string name="recipe_doesnt_exist">Recipe doesn\'t exist</string>
    <string name="product_doesnt_exist">Product doesn\'t exist</string>
    <string name="ingred_remove_error">It\'s impossible to remove this ingredient.</string>
    <string name="shared_data_error">Something went wrong with the shared data.</string>
    <string name="error_share_data_loading">Error in loading data which was shared to me</string>
    <string name="turn_off_family_mode_question">What do you want to do?</string>
    <string name="turn_off_faminy_mode">Turn off the family mode</string>
    <string name="change_users_faminy_mode_title">Change users in current family mode</string>
    <string name="get_from_contact_list_button_title">Choose the contact</string>
    <string name="russian_language">русский</string>
    <string name="buy_pattern">buy</string>
    <string name="todo_list_title">To-do list</string>
    <string name="amount_ingredient_voice_question">Распознан продукт ingredientName. Добавить его в список?</string>
    <string name="saving_ingredient_error">Error with the saving ingredient.</string>
    <string name="cant_recognize_command_error">Sorry, command wasn\'t recognized</string>
    <string name="didnt_find_product_error">Product wasn\'t found in CookPlan database.</string>
    <string name="name_note_hint">Note\'s name</string>
    <string name="comment_title">Comments</string>
    <string name="error_remove_todo_item">It\'s inpossible to remove the note.</string>
    <string name="empty_todo_list_title">To-do list is empty</string>
    <string name="category_todo_item_title">To-do item\'s category</string>
    <string name="category_required_error">Enter the text and choose the color of category, please</string>
    <string name="companies_list_title">Companies \\ Places</string>
    <string name="or_text">or</string>
    <string name="chose_contact_title">Users who can see you recipes and shopping list:</string>
    <string name="add_all_ingredients_to_shop_list_title">Add all ingredients to shopping list</string>
    <string name="share_data_title">Share information</string>
</resources>