<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--<item-->
        <!--android:id="@+id/nav_map"-->
        <!--android:icon="@drawable/ic_map_points"-->
        <!--android:title="@string/map" />-->
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/ic_shopping_list"
            android:title="@string/shopping_list_title"/>

        <item
            android:id="@+id/nav_recipe_list"
            android:icon="@drawable/ic_recipe_list"
            android:title="@string/recipe_list_menu_title"/>

        <item
            android:id="@+id/nav_whats_cooking"
            android:icon="@drawable/ic_cooking_plan"
            android:title="@string/whats_cooking_title"
            android:visible="false"/>

        <item
            android:id="@+id/nav_vocabulary"
            android:icon="@drawable/ic_product_list"
            android:title="@string/product_vocabulary_title"
            android:visible="false"/>

        <item
            android:id="@+id/nav_todo_list"
            android:icon="@drawable/ic_todo_list"
            android:title="@string/todo_list_title"
            android:visible="false"/>

        <item
            android:id="@+id/nav_companies"
            android:icon="@drawable/ic_company"
            android:title="@string/companies_list_title"
            android:visible="false"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_users"
            android:title="@string/share_data_title"/>
    </group>

</menu>
