<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_margin_left">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/todo_item_name_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_note_hint"
        android:theme="@style/NameTextInputLayoutStyle"
        app:hintTextAppearance="@style/NameHitInputStyle">

        <EditText
            android:id="@+id/todo_item_name_edit_text"
            style="@style/NameEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/category_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/todo_item_name_edit_layout"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:hint="@string/category_todo_item_title"
        android:theme="@style/CookPlanTextInputLayoutStyle"
        app:hintTextAppearance="@style/CookPlanHitInputStyle">

        <AutoCompleteTextView
            android:id="@+id/category_edit_text"
            style="@style/CookPlanEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:lines="1"/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/choose_category_color_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_edit_layout">

        <RelativeLayout
            android:id="@+id/choose_category_color_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <com.cookplan.views.ChooseColorView
                android:id="@+id/choose_category_color_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/todo_item_comment_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_category_color_main_layout"
        android:hint="@string/comment_title"
        android:scrollbars="vertical"
        android:theme="@style/CookPlanTextInputLayoutStyle"
        app:hintTextAppearance="@style/CookPlanHitInputStyle">

        <EditText
            android:id="@+id/todo_item_comment_edit_text"
            style="@style/CookPlanEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="4"
            android:maxLines="4"
            android:scrollbars="vertical"/>
    </android.support.design.widget.TextInputLayout>


</RelativeLayout>
