<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/main_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_screen_back_color">

    <android.support.v7.widget.CardView
        android:id="@+id/enter_email_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="@dimen/card_view_elevation"
        card_view:cardUseCompatPadding="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/enter_email_edittext_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите email"
            android:padding="@dimen/main_item_padding"
            android:scrollbars="vertical"

            android:theme="@style/CookPlanTextInputLayoutStyle"
            app:hintTextAppearance="@style/CookPlanHitInputStyle">

            <EditText
                android:id="@+id/user_email_editText"
                style="@style/CookPlanEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:scrollbars="vertical"/>
        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_email_card_view"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="@dimen/card_view_elevation"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/choosen_contacts_title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/main_item_padding"
                android:text="@string/chose_contact_title"
                android:textSize="@dimen/subheding_text_size"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/users_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/choosen_contacts_title_textview"
                android:scrollbars="vertical"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/choose_contacts_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_email_card_view"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/or_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/main_item_padding"
                android:text="@string/or_text"/>

            <Button
                android:id="@+id/get_from_contact_button"
                style="@style/CookplanButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/or_textview"
                android:layout_centerHorizontal="true"
                android:text="@string/get_from_contact_list_button_title"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparency_primary_the_lightest"
        android:clickable="false">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
</RelativeLayout>
